kubernetes/apps/gaia/media/jellyfin/route/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  labels:
    kubernetes.io/service-name: jellyfin
subsets:
  - addresses:
      - ip: ${jellyfin_ip}
    ports:
      - name: http
        port: 8096
        protocol: TCP
