kubernetes/apps/gaia/media/jellyfin/route/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin
  labels:
    kubernetes.io/service-name: jellyfin
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
      - ${jellyfin_ip}
