kubernetes/apps/gaia/media/jellyfin/route/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
  - protocol: TCP
    port: 8096
    targetPort: 8096
