kubernetes/apps/gaia/media/jellyfin/route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  annotations:
    external-dns-managed: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: wildcard-domain-https
  hostnames:
    - "jellyfin.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
